# repartizare

./: CMakeLists.txt  README.md
include/: CsvParser.hpp  GroupOfStudentsForInstitute.hpp  Institute.hpp  Student.hpp
resources/: brasov.csv  cluj.csv  input_special.csv
src/: GroupOfStudentsForInstitute.cpp  Institute.cpp  Student.cpp  main.cpp
